[YMCA-1726][YMCA-1729] spacing fixes

--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -7443,6 +7443,14 @@ article.node--type-landing-page {
   background-color: #f4f4f4;
 }
 
+.paragraph-70-30-columns {
+  margin-bottom: 20px;
+}
+@media (min-width: 768px) {
+  .paragraph-70-30-columns {
+    margin-bottom: 40px;
+  }
+}
 .paragraph-70-30-columns.lead-copy {
   background: #e5e5e5;
 }
@@ -11012,12 +11020,12 @@ tr:nth-last-child(3) .atcb-list {
   border-top: 2px solid #c6168d;
   box-shadow: 0px 0px 15px #d8d8d8;
   padding: 30px 25px;
-  margin-top: 10px;
+  margin-bottom: 10px;
   width: 100%;
 }
 @media (min-width: 48em) {
   .block-description--text {
-    margin: 40px 15px 0;
+    margin: 0 15px 40px;
     padding: 35px 35px 45px 45px;
   }
 }
@@ -11331,8 +11339,13 @@ tr:nth-last-child(3) .atcb-list {
 
 .content-banner {
   background: #f8f8f8;
-  box-shadow: 0px 0px 15px #d8d8d8;
-  margin: 40px 0;
+  box-shadow: 0 0 15px #d8d8d8;
+  margin: 0 0 10px;
+}
+@media (min-width: 768px) {
+  .content-banner {
+    margin: 0 0 40px;
+  }
 }
 .content-banner.page-title:before {
   background: #f8f8f8;
